# stamp_rally

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cdk.json  package-lock.json  package.json  run.sh
api/: .gitignore  README.md  pyproject.toml  run.sh
api/docker/: .env.sample  Dockerfile  docker-compose.yaml
api/docker/mysql/: .env.sample
api/docker/mysql/mysql_init/: create_user.sql
api/src/: line_event.py  main.py
api/src/crud/: admin.py  card.py  cardToken.py  place.py  rallyconfigration.py  stamp.py  user.py
api/src/database/: alembic.ini  base_class.py  db.py
api/src/database/migrations/: README.md  env.py
api/src/database/migrations/versions/: 1706965274-createeachtable.py  1707764528-changerallyconfigurationcolumnhalfcomple_.py  1708664328-addformurl.py  (+6 more)
api/src/dependencies/: __init__.py  basic.py  csrf.py  jinja2.py  jwt.py  line.py
api/src/exception/: __init__.py  exception_hander.py  exceptions.py
api/src/models/: __init__.py  admin.py  card.py  cardToken.py  lineConfiguration.py  mixins.py  place.py  rallyConfiguration.py  stamp.py  user.py
api/src/routers/: admin.py  card.py  line.py  place.py  seal.py
api/src/schemas/: __init__.py  admin.py  card.py  mixin.py  place.py  seal.py  user.py
api/src/services/: card.py  cardToken.py  lineHandler.py
api/src/setting/: __init__.py  log.py  openapi.py  variable.py
api/src/templates/: a.html  b.html  base.html  c.html  login.html  place_table.html  score_table.html  seal.html
api/src/templates/css/: liff_employ.html  liff_style.html  popup.html
api/src/templates/js/: generateQR.html  loading.html  stamp.html
api/tests/: README.md  conftest.py
api/tests/handler/: test_line_event.py
api/tests/integration/user/: conftest.py  test_user_get.py  test_user_post.py
api/tests/unit/: conftest.py
api/tests/unit/crud/: test_c_card.py  test_c_cardToken.py  test_c_place.py  test_c_stamp.py  test_c_user.py
api/tests/unit/models/: test_m_admin.py  test_m_card.py  test_m_cardtoken.py  test_m_lineConfiguration.py  test_m_place.py  test_m_rallyConfiguration.py  test_m_stamp.py  test_m_user.py
api/tests/unit/service/: test_s_card.py  test_s_cardToken.py
(+15 files in other folders)
